--- a/.tmux.conf
+++ b/.tmux.conf
@@ -177,10 +177,10 @@ bind 7 run-shell "~/.config/tmux/scripts/move_window_to_session.sh 7"
 bind 8 run-shell "~/.config/tmux/scripts/move_window_to_session.sh 8"
 bind 9 run-shell "~/.config/tmux/scripts/move_window_to_session.sh 9"
 bind 0 run-shell "~/.config/tmux/scripts/move_window_to_session.sh 10"
-bind -n M-n select-pane -L
-bind -n M-e select-pane -D
-bind -n M-u select-pane -U
-bind -n M-i select-pane -R
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 bind > swap-pane -D
 bind < swap-pane -U
 bind | swap-pane
@@ -193,10 +193,10 @@ bind S choose-tree 'move-pane -v -s "%%"'
 bind V choose-tree 'move-pane -h -s "%%"'
 
 # pane resizing
-bind -n M-N resize-pane -L 3
-bind -n M-E resize-pane -D 3
-bind -n M-U resize-pane -U 3
-bind -n M-I resize-pane -R 3
+bind -n M-H resize-pane -L 3
+bind -n M-J resize-pane -D 3
+bind -n M-K resize-pane -U 3
+bind -n M-L resize-pane -R 3
 
 set -g status-keys emacs
 set -g mode-keys vi
@@ -205,19 +205,12 @@ bind -n M-v copy-mode
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind -T copy-mode-vi n send-keys -X cursor-left
-bind -T copy-mode-vi i send-keys -X cursor-right
-bind -T copy-mode-vi u send-keys -X cursor-up
-bind -T copy-mode-vi e send-keys -X cursor-down
-bind -T copy-mode-vi h send-keys -X next-word-end
-bind -T copy-mode-vi U send-keys -N 5 -X cursor-up
-bind -T copy-mode-vi E send-keys -N 5 -X cursor-down
-bind -T copy-mode-vi N send-keys -X start-of-line
-bind -T copy-mode-vi I send-keys -X end-of-line
+bind -T copy-mode-vi H send-keys -X start-of-line
+bind -T copy-mode-vi L send-keys -X end-of-line
 bind -T copy-mode-vi Y send-keys -X copy-end-of-line
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "~/.config/tmux/scripts/copy_to_clipboard.sh"
-bind -T copy-mode-vi = send-keys -X search-again
-bind -T copy-mode-vi = send-keys -X search-reverse
+bind -T copy-mode-vi n send-keys -X search-again
+bind -T copy-mode-vi N send-keys -X search-reverse
 
 
 bind b list-buffers
@@ -225,8 +218,8 @@ bind p paste-buffer
 
 bind l run-shell "~/.config/tmux/scripts/move_session.sh left"
 bind y run-shell "~/.config/tmux/scripts/move_session.sh right"
-bind -n M-l swap-window -d -t :-1
-bind -n M-y swap-window -d -t :+1
+bind -n 'M-<' swap-window -d -t :-1
+bind -n 'M->' swap-window -d -t :+1
 
 bind I run-shell "~/.config/tmux/scripts/layout_builder.sh right"
 bind N run-shell "~/.config/tmux/scripts/layout_builder.sh left"
@@ -294,7 +287,4 @@ bind -n F5 run-shell -b "~/.config/tmux/scripts/switch_session_by_index.sh 5"
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",*256col*:RGB"
 set -as terminal-overrides ",*256col*:Tc"
-unbind -T copy-mode-vi C-u
-unbind -T copy-mode-vi C-e
-bind -T copy-mode-vi C-u send-keys -N 5 -X scroll-up
-bind -T copy-mode-vi C-e send-keys -N 5 -X scroll-down
+# Vim-style scrolling (Ctrl+u/Ctrl+d are default in copy-mode-vi)
