--- a/.tmux.conf
+++ b/.tmux.conf
@@ -149,10 +149,11 @@ bind -n M-& join-pane -t :7
 bind -n M-* join-pane -t :8
 bind -n M-( join-pane -t :9
 
-bind u split-window -vb -c "#{pane_current_path}"
-bind e split-window -v -c "#{pane_current_path}"
-bind n split-window -hb -c "#{pane_current_path}"
-bind i split-window -h -c "#{pane_current_path}"
+# panel 创建 - 按方向映射 (prefix + hjkl)
+bind h split-window -hb -c "#{pane_current_path}"   # 水平分割（左侧）
+bind j split-window -v -c "#{pane_current_path}"    # 垂直分割（下方）
+bind k split-window -vb -c "#{pane_current_path}"   # 垂直分割（上方）
+bind l split-window -h -c "#{pane_current_path}"    # 水平分割（右侧）
 
 bind -n M-f resize-pane -Z
 
